--- a/src/sections/header.html
+++ b/src/sections/header.html
@@ -1,4 +1,5 @@
 <header class="header">
+
   <svg class="btn-scroll header__btn-scroll" width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
     <g clip-path="url(#clip0_22728_11339)">
       <circle opacity="0.5" cx="21" cy="21" r="20" stroke="white" stroke-width="2" />
@@ -10,5 +11,9 @@
       </clipPath>
     </defs>
   </svg>
+
+  <div class="icon">
+    <img src="img/icons/ecommerce.svg" alt="icon">
+  </div>
 
 </header>
