--- a/src/sections/footer.html
+++ b/src/sections/footer.html
@@ -1,3 +1,28 @@
 <footer class="footer">
+  <div class="container">
+		<div class="footer__items">
+			<div class="footer__items-place">
+			<div class="footer__items-place_adress">
+				Kyiv, Mechnikova str., 14/1
+			</div>
+			<a class="footer__items-place_map" href="https://www.google.com.ua/maps" target="_blank">On map</a>
+		</div>
+
+		<div class="footer__items-contacts">
+			<a class="footer__items-contacts_icon" href="https://www.facebook.com/" target="_blank">
+				<svg>
+					<use xlink:href="#footer_fb"></use>
+				</svg>
+			</a>
+			<a class="footer__items-contacts_call" href="tel:0800 211 927">0800 211 927</a>
+			<a class="footer__items-contacts_mail" href="mailto:contact@forstudy.space">contact@forstudy.space</a>
+		</div>
+
+		<div class="footer__items-promo">
+			© 2021 HLEGAL Law company, LLC
+		</div>
+		</div>
+		
+  </div>
 
 </footer>
