--- a/src/sections/clients.html
+++ b/src/sections/clients.html
@@ -5,40 +5,40 @@
     </div>
     <div class="clients__list">
       <a href="https://ithillel.ua/" class="clients__list-item client_hillel" target="_blank">
-        <img src="../dist/img/logos/Hillel.png" alt="logo">
+        <img src="../img/logos/Hillel.png" alt="logo">
       </a>
       <a href="#" class="clients__list-item client_wanna_biz" target="_blank">
-        <img src="../dist/img/logos/WannaBiz.png" alt="logo">
+        <img src="../img/logos/WannaBiz.png" alt="logo">
       </a>
       <a href="#" class="clients__list-item client_tapgerine" target="_blank">
-        <img src="../dist/img/logos/Tapgerine.png" alt="logo">
+        <img src="../img/logos/Tapgerine.png" alt="logo">
       </a>
       <a href="#" class="clients__list-item client_3d_look" target="_blank">
-        <img src="../dist/img/logos/3dLook.png" alt="logo">
+        <img src="../img/logos/3dLook.png" alt="logo">
       </a>
       <a href="#" class="clients__list-item client_orangear" target="_blank">
-        <img src="../dist/img/logos/Orangear.png" alt="logo">
+        <img src="../img/logos/Orangear.png" alt="logo">
       </a>
       <a href="#" class="clients__list-item client_adtellige" target="_blank">
-        <img src="../dist/img/logos/adtelliqent.png" alt="logo">
+        <img src="../img/logos/adtelliqent.png" alt="logo">
       </a>
       <a href="#" class="clients__list-item client_clickky" target="_blank">
-        <img src="../dist/img/logos/Clickky.png" alt="logo">
+        <img src="../img/logos/Clickky.png" alt="logo">
       </a>
       <a href="#" class="clients__list-item client_eco_leasing" target="_blank">
-        <img src="../dist/img/logos/EcoLeasing.png" alt="logo">
+        <img src="../img/logos/EcoLeasing.png" alt="logo">
       </a>
       <a href="#" class="clients__list-item client_infatek" target="_blank">
-        <img src="../dist/img/logos/InfaTek.png" alt="logo">
+        <img src="../img/logos/InfaTek.png" alt="logo">
       </a>
       <a href="#" class="clients__list-item client_city_park" target="_blank">
-        <img src="../dist/img/logos/CityPark.png" alt="logo">
+        <img src="../img/logos/CityPark.png" alt="logo">
       </a>
       <a href="#" class="clients__list-item client_art_prints" target="_blank">
-        <img src="../dist/img/logos/ArtPrintStudio.png" alt="logo">
+        <img src="../img/logos/ArtPrintStudio.png" alt="logo">
       </a>
       <a href="#" class="clients__list-item client_ultimate" target="_blank">
-        <img src="../dist/img/logos/UltimateCard.png" alt="logo">
+        <img src="../img/logos/UltimateCard.png" alt="logo">
       </a>
     </div>
   </div>
