--- a/src/sections/header.html
+++ b/src/sections/header.html
@@ -16,8 +16,8 @@
     </a>
   </div>
 
-  <a class="header__logo" href="#">
-    <img src="../dist/img/Logo.svg" alt="logo"></a>
+  <a class="header__logo" href="../index.html">
+    <img src="../img/Logo.svg" alt="logo"></a>
 
   <div class="header__menu-wrapper header__menu-wrapper_show" id="header__menu-wrapper">
 
@@ -30,11 +30,11 @@
 
       <nav class="header__menu-list">
         <ul class="header__menu-list_items">
-          <li class="menu-item"><a href="#"></a>about us</li>
-          <li class="menu-item"><a href="#"></a>services</li>
-          <li class="menu-item"><a href="#"></a>team</li>
-          <li class="menu-item"><a href="#"></a>publications</li>
-          <li class="menu-item"><a href="#"></a>contact</li>
+          <li class="menu-item"><a href="#">about us</a></li>
+          <li class="menu-item is-active_services"><a href="../dist/pages/services.html">services</a></li>
+          <li class="menu-item"><a href="#">team</a></li>
+          <li class="menu-item"><a href="#">publications</a></li>
+          <li class="menu-item"><a href="#">contact</a></li>
         </ul>
       </nav>
     </div>
