--- a/src/sections/compration.html
+++ b/src/sections/compration.html
@@ -4,7 +4,7 @@
   <div class="comparison-cards">
     <div class="comparison-card">
       <div class="comparison-card__icon-wrapper">
-        <img src="img/icons/ecommerce.svg" alt="icon">
+        <img src="../img/icons/ecommerce.svg" alt="icon">
       </div>
       <h3 class="comparison-card_title">IT and e-commerce</h3>
       <p class="comparison-card_text">An endless stream of contracts, tax issues, labor relations, corporate
@@ -13,7 +13,7 @@
     </div>
     <div class="comparison-card">
       <div class="comparison-card__icon-wrapper">
-        <img src="img/icons/support.svg" alt="icon">
+        <img src="../img/icons/support.svg" alt="icon">
       </div>
       <h3 class="comparison-card_title">Comprehensive daily legal support</h3>
       <p class="comparison-card_text">In addition, over time, the work will become the same type and
@@ -24,7 +24,7 @@
     </div>
     <div class="comparison-card">
       <div class="comparison-card__icon-wrapper">
-        <img src="img/icons/coprorate.svg" alt="icon">
+        <img src="../img/icons/coprorate.svg" alt="icon">
       </div>
       <h3 class="comparison-card_title">Structuring corporate relationships</h3>
       <p class="comparison-card_text">Instead of just providing legal services, we will hire a lawyer or a whole
@@ -33,7 +33,7 @@
     </div>
     <div class="comparison-card">
       <div class="comparison-card__icon-wrapper">
-        <img src="img/icons/trust.svg" alt="icon">
+        <img src="../img/icons/trust.svg" alt="icon">
       </div>
       <h3 class="comparison-card_title">Building contractual relations</h3>
       <p class="comparison-card_text">Once a week, or week after month, you have your own lawyer by your side.
@@ -42,7 +42,7 @@
     </div>
     <div class="comparison-card">
       <div class="comparison-card__icon-wrapper">
-        <img src="img/icons/protection.svg" alt="icon">
+        <img src="../img/icons/protection.svg" alt="icon">
       </div>
       <h3 class="comparison-card_title">Protection of business, intellectual property</h3>
       <p class="comparison-card_text">And all the other time he will work on new diverse projects, so he will
@@ -52,7 +52,7 @@
     </div>
     <div class="comparison-card">
       <div class="comparison-card__icon-wrapper">
-        <img src="img/icons/court.svg" alt="icon">
+        <img src="../img/icons/court.svg" alt="icon">
       </div>
       <h3 class="comparison-card_title">Judicial representation</h3>
       <p class="comparison-card_text">Is it a small, medium-sized company or a market leader? Local business or
