--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,6 @@
                 <use xlink:href="#scroll"></use>
               </svg>
             </button>
-
           </div>
         </div>
 
@@ -56,7 +55,7 @@
   <main>
 
     <section class="team">
-      <div class=" container">
+      <div class="container">
         <div class="team__cards swiper">
           <div class="swiper-wrapper">
 
@@ -65,7 +64,13 @@
                 <img class="team_photo" src="../dist/img/Team/TeamPhoto-1.jpg" alt="man">
               </div>
               <div class="team__cards-card_text">
-                <a class="suptitle" href="#">команда</a>
+                <div class="suptitle">
+                  <a class="suptitle-text" href="#">команда
+                    <svg class="suptitle-icon" viewBox="0 0 8 11">
+                      <use xlink:href="#suptitle-icon"></use>
+                    </svg>
+                  </a>
+                </div>
                 <h2 class="gradient_title">Ми звикли брати на себе відповідальність та завжди гарантуємо чесну, вчасну
                   допомогу, навіть у ситуаціях, коли більшість безсилі.</h2>
                 <div class="full_name">Олександр Олександровський</div>
@@ -108,7 +113,10 @@
 
     @@include('sections/clients.html')
 
-    @@include('sections/recommended.html')
+    <div class="recommended__homepage">
+      @@include('sections/recommended.html')
+    </div>
+    
     
   </main>
  
