--- a/src/pages/publications.html
+++ b/src/pages/publications.html
@@ -5,31 +5,31 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Services</title>
+  <title>Publications</title>
   <link rel="stylesheet" href="@@webRoot/css/main.min.css" />
 </head>
 
 <body>
-  <div class="services-header__wrapper">
+  <div class="publications-header__wrapper">
     <div class="container">
-      <div class="services-header">
+      <div class="publications-header white-header">
         @@include('../sections/header.html')
-        <div class="services-header__comparation">
-          @@include('../sections/compration.html')
-        </div>
+       
       </div>
 
     </div>
   </div>
 
-    <main>
+  <main>
 
-      @@include('../sections/clients.html')
-    </main>
-    @@include('../sections/footer.html')
+    <div class="publication__recommended">
+      @@include('../sections/recommended.html')
+    </div>
+  </main>
+  @@include('../sections/footer.html')
 
-    @@include('../sections/icons.html')
-  
+  @@include('../sections/icons.html')
+  </div>
 
   <script src="@@webRoot/js/menu.min.js"></script>
 </body>
