--- a/src/sections/header.html
+++ b/src/sections/header.html
@@ -5,19 +5,34 @@
       <a class=" langswitcher__language" id="ru">ру</a>
       <a class="langswitcher__language" id="en">en</a>
     </div>
-    <a class="header__contacts-adress" href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%9C%D0%B5%D1%87%D0%BD%D0%B8%D0%BA%D0%BE%D0%B2%D0%B0,+14%2F1,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.436795,30.532705,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4cf07295b8e39:0x17b2112e2dc0e7a!8m2!3d50.436795!4d30.532705!16s%2Fg%2F11c5mrd800" target="_blank">Kyiv, Mechnikova str, 14/1</a>
+    <a class="header__contacts-adress"
+      href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%9C%D0%B5%D1%87%D0%BD%D0%B8%D0%BA%D0%BE%D0%B2%D0%B0,+14%2F1,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.436795,30.532705,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4cf07295b8e39:0x17b2112e2dc0e7a!8m2!3d50.436795!4d30.532705!16s%2Fg%2F11c5mrd800"
+      target="_blank">Kyiv, Mechnikova str, 14/1</a>
 
     <a class="header__contacts-call" href="tel:0800211927">0800 211 927</a>
 
-    <a class="header__contacts-fb" href="https://www.facebook.com/" target="_blank">
-      <svg class="header__contacts-fb_icon">
+    <a class="header-fb" href="https://www.facebook.com/" target="_blank">
+      <svg class="header-fb_icon" viewBox="0 0 24 24">
         <use xlink:href="#header_fb"></use>
       </svg>
     </a>
+
   </div>
 
-  <a class="header__logo" href="../index.html">
-    <img src="../img/Logo.svg" alt="logo"></a>
+  <div class="header__breadcrumbs">
+    <ul class="breadcrumbs">
+      <li class="breadcrumbs-item header-logo">
+        <a class="header-logo_link" href="@@webRoot/index.html">
+          <svg class="header-logo_icon">
+            <use xlink:href="#primary_logo"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="breadcrumbs-item breadcrumbs_services">services</li>
+      <li class="breadcrumbs-item breadcrumbs_publications">publications</li>
+      <li class="breadcrumbs-item breadcrumbs_contact">contact</li>
+    </ul>
+  </div>
 
   <div class="header__menu-wrapper header__menu-wrapper_show" id="header__menu-wrapper">
 
@@ -31,16 +46,16 @@
       <nav class="header__menu-list">
         <ul class="header__menu-list_items">
           <li class="menu-item"><a href="#">about us</a></li>
-          <li class="menu-item is-active_services"><a href="../dist/pages/services.html">services</a></li>
+          <li class="menu-item"><a class="is-active_services" href="@@webRoot/pages/services.html">services</a></li>
           <li class="menu-item"><a href="#">team</a></li>
-          <li class="menu-item"><a href="#">publications</a></li>
-          <li class="menu-item"><a href="#">contact</a></li>
+          <li class="menu-item"><a class="is-active_publications"href="@@webRoot/pages/publications.html">publications</a></li>
+          <li class="menu-item"><a class="is-active_contact" href="@@webRoot/pages/contact.html">contact</a></li>
         </ul>
       </nav>
     </div>
 
   </div>
-  
+
   <div class="burger__wrapper">
 
     <button class="burger" id="burger">
