--- a/src/sections/header.html
+++ b/src/sections/header.html
@@ -28,7 +28,9 @@
           </svg>
         </a>
       </li>
+      <li class="breadcrumbs-item breadcrumbs_about-us">about us</li>
       <li class="breadcrumbs-item breadcrumbs_services">services</li>
+      <li class="breadcrumbs-item breadcrumbs_team">team</li>
       <li class="breadcrumbs-item breadcrumbs_publications">publications</li>
       <li class="breadcrumbs-item breadcrumbs_contact">contact</li>
     </ul>
@@ -45,10 +47,10 @@
 
       <nav class="header__menu-list">
         <ul class="header__menu-list_items">
-          <li class="menu-item"><a href="#">about us</a></li>
+          <li class="menu-item"><a class="is-active_about-us"href="@@webRoot/pages/about_us.html">about us</a></li>
           <li class="menu-item"><a class="is-active_services" href="@@webRoot/pages/services.html">services</a></li>
-          <li class="menu-item"><a href="#">team</a></li>
-          <li class="menu-item"><a class="is-active_publications"href="@@webRoot/pages/publications.html">publications</a></li>
+          <li class="menu-item"><a class="is-active_team"href="@@webRoot/pages/team.html">team</a></li>
+          <li class="menu-item"><a class="is-active_publications" href="@@webRoot/pages/publications.html">publications</a></li>
           <li class="menu-item"><a class="is-active_contact" href="@@webRoot/pages/contact.html">contact</a></li>
         </ul>
       </nav>
