--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
 
             <div class="team__cards-card swiper-slide">
               <div class="team__cards-card_photo">
-                <img class="team_photo" src="../dist/img/Team/TeamPhoto-1.jpg" alt="man">
+                <img class="team_photo" src="@@webRoot/img/Team/TeamPhoto-1.jpg" alt="man">
               </div>
               <div class="team__cards-card_text">
                 <div class="suptitle">
@@ -80,7 +80,7 @@
 
             <div class="team__cards-card swiper-slide">
               <div class="team__cards-card_photo">
-                <img class="team_photo" src="../dist/img/Team/TeamPhoto-5.jpg" alt="woman">
+                <img class="team_photo" src="@@webRoot/img/Team/TeamPhoto-5.jpg" alt="woman">
               </div>
               <div class="team__cards-card_text">
                 <a class="suptitle" href="#">команда</a>
@@ -93,7 +93,7 @@
 
             <div class="team__cards-card swiper-slide">
               <div class="team__cards-card_photo">
-                <img class="team_photo" src="../dist/img/Team/TeamPhoto-4.jpg" alt="man">
+                <img class="team_photo" src="@@webRoot/img/Team/TeamPhoto-4.jpg" alt="man">
               </div>
               <div class="team__cards-card_text">
                 <a class="suptitle" href="#">команда</a>
@@ -116,10 +116,10 @@
     <div class="recommended__homepage">
       @@include('sections/recommended.html')
     </div>
-    
-    
+
+
   </main>
- 
+
   @@include('sections/footer.html')
   @@include('sections/icons.html')
 
