--- a/src/sections/header.html
+++ b/src/sections/header.html
@@ -47,7 +47,7 @@
 
       <nav class="header__menu-list">
         <ul class="header__menu-list_items">
-          <li class="menu-item"><a class="is-active_about-us"href="@@webRoot/pages/about_us.html">about us</a></li>
+          <li class="menu-item"><a class="is-active_about-us"href="@@webRoot/pages/about.html">about us</a></li>
           <li class="menu-item"><a class="is-active_services" href="@@webRoot/pages/services.html">services</a></li>
           <li class="menu-item"><a class="is-active_team"href="@@webRoot/pages/team.html">team</a></li>
           <li class="menu-item"><a class="is-active_publications" href="@@webRoot/pages/publications.html">publications</a></li>
