--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
               </div>
               <div class="team__cards-card_text">
                 <div class="suptitle">
-                  <a class="suptitle-text" href="#">команда
+                  <a class="suptitle-text" href="./pages/team.html">команда
                     <svg class="suptitle-icon" viewBox="0 0 8 11">
                       <use xlink:href="#suptitle-icon"></use>
                     </svg>
@@ -83,7 +83,13 @@
                 <img class="team_photo" src="@@webRoot/img/Team/TeamPhoto-5.jpg" alt="woman">
               </div>
               <div class="team__cards-card_text">
-                <a class="suptitle" href="#">команда</a>
+                <div class="suptitle">
+                  <a class="suptitle-text" href="./pages/team.html">команда
+                    <svg class="suptitle-icon" viewBox="0 0 8 11">
+                      <use xlink:href="#suptitle-icon"></use>
+                    </svg>
+                  </a>
+                </div>
                 <h2 class="gradient_title">Ми звикли брати на себе відповідальність та завжди гарантуємо чесну, вчасну
                   допомогу, навіть у ситуаціях, коли більшість безсилі.</h2>
                 <div class="full_name">Олександр Олександровський</div>
@@ -96,7 +102,13 @@
                 <img class="team_photo" src="@@webRoot/img/Team/TeamPhoto-4.jpg" alt="man">
               </div>
               <div class="team__cards-card_text">
-                <a class="suptitle" href="#">команда</a>
+                <div class="suptitle">
+                  <a class="suptitle-text" href="./pages/team.html">команда
+                    <svg class="suptitle-icon" viewBox="0 0 8 11">
+                      <use xlink:href="#suptitle-icon"></use>
+                    </svg>
+                  </a>
+                </div>
                 <h2 class="gradient_title">Ми звикли брати на себе відповідальність та завжди гарантуємо чесну, вчасну
                   допомогу, навіть у ситуаціях, коли більшість безсилі.</h2>
                 <div class="full_name">Олександр Олександровський</div>
@@ -107,7 +119,6 @@
           </div>
         </div>
         <div class="cards-pagination"></div>
-
       </div>
     </section>
 
