--- a/src/sections/compration.html
+++ b/src/sections/compration.html
@@ -13,7 +13,7 @@
       <div class="comparison-card__icon-wrapper">
         <img src="@@webRoot/img/icons/ecommerce.svg" alt="icon">
       </div>
-      <h3 class="comparison-card_title">IT and e-commerce</h3>
+      <a class="comparison-card_title" href="#">IT and e-commerce</a>
       <p class="comparison-card_text">An endless stream of contracts, tax issues, labor relations, corporate
         papers - legal work distracts you
         from doing business. But there is not much work to do to hire an in-house lawyer.</p>
@@ -22,7 +22,7 @@
       <div class="comparison-card__icon-wrapper">
         <img src="@@webRoot/img/icons/support.svg" alt="icon">
       </div>
-      <h3 class="comparison-card_title">Comprehensive daily legal support</h3>
+      <a class="comparison-card_title" href="#">Comprehensive daily legal support</a>
       <p class="comparison-card_text">In addition, over time, the work will become the same type and
         uninteresting for a full-time lawyer. And
         we know very well how difficult it is to find a good candidate with experience in the field of
@@ -33,7 +33,7 @@
       <div class="comparison-card__icon-wrapper">
         <img src="@@webRoot/img/icons/coprorate.svg" alt="icon">
       </div>
-      <h3 class="comparison-card_title">Structuring corporate relationships</h3>
+      <a class="comparison-card_title" href="#">Structuring corporate relationships</a>
       <p class="comparison-card_text">Instead of just providing legal services, we will hire a lawyer or a whole
         team that will fit into the
         daily life of your company.</p>
@@ -42,7 +42,7 @@
       <div class="comparison-card__icon-wrapper">
         <img src="@@webRoot/img/icons/trust.svg" alt="icon">
       </div>
-      <h3 class="comparison-card_title">Building contractual relations</h3>
+      <a class="comparison-card_title" href="#">Building contractual relations</a>
       <p class="comparison-card_text">Once a week, or week after month, you have your own lawyer by your side.
         Anyone in the company can catch
         it at the coffee maker and just talk about current affairs instead of waiting for update status.</p>
@@ -51,7 +51,7 @@
       <div class="comparison-card__icon-wrapper">
         <img src="@@webRoot/img/icons/protection.svg" alt="icon">
       </div>
-      <h3 class="comparison-card_title">Protection of business, intellectual property</h3>
+      <a class="comparison-card_title" href="#">Protection of business, intellectual property</a>
       <p class="comparison-card_text">And all the other time he will work on new diverse projects, so he will
         definitely not stop in
         professional development. One way or another, all Axon Partners will work for you instead of a corporate
@@ -61,7 +61,7 @@
       <div class="comparison-card__icon-wrapper">
         <img src="@@webRoot/img/icons/court.svg" alt="icon">
       </div>
-      <h3 class="comparison-card_title">Judicial representation</h3>
+      <a class="comparison-card_title" href="#">Judicial representation</a>
       <p class="comparison-card_text">Is it a small, medium-sized company or a market leader? Local business or
         multinational company? Do you
         have your own legal department or not?</p>
